--- a/MvcApp1/PaperseedPortal.csproj
+++ b/MvcApp1/PaperseedPortal.csproj
@@ -292,10 +292,15 @@
     <Content Include="Content\materialize\LICENSE" />
     <Content Include="Content\materialize\README.md" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="Images\leatherbg.jpg" />
+    <Content Include="Images\p1.jpg" />
+    <Content Include="Images\p2.jpg" />
+    <Content Include="Images\register.png" />
     <Content Include="Images\slider1.jpg" />
     <Content Include="Images\slider2.jpg" />
     <Content Include="Images\slider3.jpg" />
     <Content Include="Images\slider4.jpg" />
+    <Content Include="Images\woodbg.jpg" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
